@@ -1,5 +1,13 @@
 PHORONIX TEST SUITE CHANGE-LOG
 
+Phoronix Test Suite (Git)
+
+- pts-core: Major performance improvements when merging many result files
+- pts-core: Faster result file parsing
+- pts-core: Stress-run improvements
+- phoromatic: Improved tracker page
+- phoromatic: Updated maintenance page
+
 Phoronix Test Suite 5.8 Milestone 4
 20 May 2015
 
